--- a/styling/styles.css
+++ b/styling/styles.css
@@ -117,6 +117,30 @@
   margin-bottom: 8px;
 }
 
+.projects-description-work {
+  font-weight: 300;
+}
+
+.h4-projects.work {
+  padding-top: 20px;
+}
+
+.contact-link-home.work {
+  display: inherit;
+  text-align: center;
+  margin: 0 auto;
+  width: 50%;
+}
+
+.paragraph-about-me {
+  margin: 0 auto;
+  padding-top: 30px;
+  display: block;
+  text-align: center;
+  font-weight: 300;
+  width: 60%;
+}
+
 .wrapper-contact {
   text-align: center;
   margin-top: 30px;
@@ -142,28 +166,19 @@
   margin-bottom: 8px;
 }
 
-.projects-description-work {
-  font-weight: 300;
-}
-
-.h4-projects.work {
-  padding-top: 20px;
-}
-
-.contact-link-home.work {
-  display: inherit;
+.github {
+  color: #4b4b4b;
+  font-size: 10px;
   text-align: center;
-  margin: 0 auto;
-  width: 50%;
+  margin-bottom: 10px;
 }
 
-.paragraph-about-me {
-  margin: 0 auto;
-  padding-top: 30px;
-  display: block;
-  text-align: center;
-  font-weight: 300;
-  width: 60%;
+.github a {
+  color: #4b4b4b;
+}
+
+.github a:hover {
+  text-decoration: none;
 }
 
 @media (max-width: 700px) {
