--- a/styling/stylework.css
+++ b/styling/stylework.css
@@ -34,6 +34,7 @@
   font-family: var(--font-family1);
 }
 
+/*
 .contact-link-home {
   display: inline-block;
   text-decoration: none;
@@ -50,6 +51,7 @@
   background-color: #571111;
   transition: .5s ease-in-out;
 }
+*/
 
 .h3-headers-home {
   text-align: center;
@@ -68,25 +70,6 @@
   padding-top: 0px;
 }
 
-/* Accueil */
-/* Stage */
-/* ChooseMyCompany */
-/* Contact */
-
-.project-one {
-  position: relative;
-}
-
-.images-projects-home {
-  width: 90%;
-  opacity: 60%;
-}
-
-.images-projects-home:hover {
-  opacity: 100%;
-  transition: .5s ease-in-out;
-}
-
 .h4-projects {
   margin-bottom: 0px;
   margin-top: 10px;
@@ -97,29 +80,6 @@
 .h4-projects a {
   text-decoration: none;
   color: #000;
-}
-
-.projects-description-home {
-  display: inline-block;
-  width: 80%;
-  text-align: center;
-  font-weight: 300;
-}
-
-.wrapper-skills {
-  text-align: center;
-  margin-top: 30px;
-  font-weight: 300;
-}
-
-.wrapper-logos {
-  display: inline-block;
-  margin: 0px 20px;
-}
-
-.logos-skills {
-  width: 60px;
-  margin-bottom: 8px;
 }
 
 .projects-description-work {
@@ -146,44 +106,11 @@
   width: 60%;
 }
 
-.wrapper-contact {
-  text-align: center;
-  margin-top: 30px;
-  font-weight: 300;
-  margin-bottom: 30px;
-}
-
-.each-contact {
-  display: inline-block;
-}
-
-.each-contact.one {
-  margin-right: 60px;
-}
-
-.each-contact a {
-  text-decoration: none;
-  color: #000;
-}
-
-.logos-contact {
-  width: 60px;
-  margin-bottom: 8px;
-}
-
 .github {
   color: #4b4b4b;
   font-size: 10px;
   text-align: center;
   margin-bottom: 10px;
-}
-
-.github a {
-  color: #4b4b4b;
-}
-
-.github a:hover {
-  text-decoration: none;
 }
 
 /* Format reponsive */
@@ -230,11 +157,6 @@
 
   .wrapper-logos	{
     margin-top: 15px;
-  }
-
-  .each-contact {
-    width: 100%;
-    margin-bottom: 15px;
   }
 
   .project-image-work {
