--- a/styling/stylework.css
+++ b/styling/stylework.css
@@ -11,7 +11,7 @@
   text-align: center;
 }
 
-.header-home {
+.header-work {
   background-color: var(--primary-color);
   text-align: center;
   padding-top: 60px;
@@ -19,41 +19,22 @@
   width: 100%;
 }
 
-.h1-home {
+.h1-work {
   font-size: 70px;
   font-weight: 600;
   margin-bottom: 0;
 }
 
-.h2-home {
+.h2-work {
   margin-top: 0;
   font-weight: 400;
 }
 
-.h1-home, .h2-home {
+.h1-work, .h2-work {
   font-family: var(--font-family1);
 }
 
-/*
-.contact-link-home {
-  display: inline-block;
-  text-decoration: none;
-  font-family: sans-serif;
-  color: #fff;
-  background-color: #b32222;
-  border-radius: 50px;
-  padding: 10px 20px;
-  margin-top: 30px;
-}
-
-.contact-link-home:hover {
-  color: #fff;
-  background-color: #571111;
-  transition: .5s ease-in-out;
-}
-*/
-
-.h3-headers-home {
+.h3-work {
   text-align: center;
   font-family: var(--font-family1);
   font-size: 50px;
@@ -62,7 +43,7 @@
   margin-bottom: -25px;
 }
 
-.line-under-headers {
+.line-under-h3 {
   margin: 0 auto;
   color: #000;
   text-align: center;
@@ -70,34 +51,32 @@
   padding-top: 0px;
 }
 
-.h4-projects {
+.h4-work {
   margin-bottom: 0px;
   margin-top: 10px;
+  padding-top: 20px;
   font-family: var(--font-family1);
   font-weight: 400;
 }
 
-.h4-projects a {
+.h4-work a {
   text-decoration: none;
   color: #000;
 }
 
-.projects-description-work {
+.realisation-text {
   font-weight: 300;
 }
 
-.h4-projects.work {
-  padding-top: 20px;
-}
-
-.contact-link-home.work {
+.realisation-link {
   display: inherit;
   text-align: center;
   margin: 0 auto;
   width: 50%;
+  text-decoration: none;
 }
 
-.paragraph-about-me {
+.paragraph-work {
   margin: 0 auto;
   padding-top: 30px;
   display: block;
@@ -106,7 +85,7 @@
   width: 60%;
 }
 
-.github {
+.footer {
   color: #4b4b4b;
   font-size: 10px;
   text-align: center;
@@ -116,59 +95,37 @@
 /* Format reponsive */
 
 @media (max-width: 700px) {
-  .h1-home {
+  .h1-work {
     font-size: 40px;
   }
 
-  .h2-home {
+  .h2-work {
     font-size: 18px;
   }
 
-  .h3-headers-home {
+  .h3-work {
     font-size: 35px;
     margin-bottom: 20px;
   }
 
-  .line-under-headers {
+  .line-under-h3 {
     display: none;
-  }
-  
-  .images-projects {
-    opacity: 1;
-  }
-
-  .project-one {
-    display: block;
-    width: 100%;
-  }
-
-  .project-one .images-projects {
-    width: 70%;
-  }
-
-  .project-two {
-    display: block;
-    width: 100%;
-  }
-
-  .project-two .images-projects {
-    width: 70%;
   }
 
   .wrapper-logos	{
     margin-top: 15px;
   }
 
-  .project-image-work {
+  .presentation-realisation {
     display: block;
     width: 80%;
   }
 
-  .h4-projects.work {
+  .h4-work {
     padding-top: 5px;
   }
 
-  .project-text-work {
+  .realisations-single {
     display: block;
     width: 80%;
     margin-bottom: 20px;
