--- a/styling/styleabout.css
+++ b/styling/styleabout.css
@@ -51,9 +51,18 @@
   padding-top: 0px;
 }
 
+.h4-about {
+  margin-bottom: 0px;
+  margin-top: 10px;
+  padding-top: 20px;
+  font-family: var(--font-family1);
+  font-weight: 400;
+  text-align: center;
+}
+
 .paragraph-about {
   margin: 0 auto;
-  padding-top: 30px;
+  padding-top: 10px;
   display: block;
   text-align: center;
   font-weight: 300;
