--- a/styling/stylehome.css
+++ b/styling/stylehome.css
@@ -70,6 +70,20 @@
   padding-top: 0px;
 }
 
+.h4-home {
+  margin-bottom: 0px;
+  margin-top: 10px;
+  padding-top: 20px;
+  font-family: var(--font-family1);
+  font-weight: 400;
+}
+
+.photo-marion {
+  width: 300px;
+  margin: auto;
+  margin-top: 20px;
+}
+
 .wrapper-skills-home {
   text-align: center;
   margin-top: 30px;
@@ -83,16 +97,16 @@
 
 .logos-skills-home {
   width: 60px;
-  margin-bottom: 8px;
+  margin-top: 10px;
 }
 
 .paragraph-home {
   margin: 0 auto;
-  padding-top: 30px;
+  padding-top: 15px;
   display: block;
   text-align: center;
   font-weight: 300;
-  width: 60%;
+  width: 50%;
 }
 
 .footer {
