--- a/styling/stylework.css
+++ b/styling/stylework.css
@@ -78,11 +78,24 @@
 }
 
 .realisation-link {
-  display: inherit;
-  text-align: center;
-  margin: 0 auto;
-  width: 50%;
   text-decoration: none;
+}
+
+.realisation-link {
+  display: inline-block;
+  text-decoration: none;
+  font-family: sans-serif;
+  font-size: 10px;
+  color: #fff;
+  background-color: #b32222;
+  border-radius: 50px;
+  padding: 5px 10px;
+}
+
+.realisation-link:hover {
+  color: #fff;
+  background-color: #571111;
+  transition: .5s ease-in-out;
 }
 
 .paragraph-work {
@@ -123,11 +136,6 @@
 
   .wrapper-logos	{
     margin-top: 15px;
-  }
-
-  .presentation-realisation {
-    display: block;
-    width: 80%;
   }
 
   .h4-work {
