mise en place presque finie

--- a/styling/styleabout.css
+++ b/styling/styleabout.css
@@ -69,6 +69,14 @@
   width: 60%;
 }
 
+.div-tableau {
+  text-align: center;
+}
+
+.img-tableau {
+  width: 60%;
+}
+
 .footer {
   color: #4b4b4b;
   font-size: 10px;
